--- a/ex22 (imagens de fundo)/fundo002.html
+++ b/ex22 (imagens de fundo)/fundo002.html
@@ -7,8 +7,9 @@
     <title>Personalização de fundos</title>
     <style> 
     body {
-        background-image: url(imagens/wallpaper001.jpg);
+        background-image: url(imagens/pattern001.png);
         background-size: 100px 100px;
+        background-repeat: no-repeat;
     }
     </style>
 </head>
