Shorthand background image

--- a/ex22 (imagens de fundo)/fundo006.html
+++ b/ex22 (imagens de fundo)/fundo006.html
@@ -8,16 +8,21 @@
     <style> 
     body {
         height: 100vh;
-        background-color: black;
+        /*background-color: black;
         background-image: url(imagens/wallpaper002.jpg);
         background-position: center center;
-        background-repeat: repeat-y;
+        background-repeat: no-repeat;
         background-size: cover;
+        background-attachment: fixed;*/
+        background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+        background-size: cover;
+
+        
     }
 
     main {
         background-color: white;
-        width: 400px;
+        max-width: 400px;
         padding: 10px;
         margin: auto;
         border: 1px solid darkblue;
@@ -33,6 +38,10 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias perspiciatis commodi quae amet hic voluptate? Pariatur mollitia corporis quis illo officia expedita ratione id fuga fugiat repudiandae? Omnis quidem eum tempora neque excepturi eius sed expedita rem at, iusto voluptatem delectus consequatur et quia voluptatibus laborum nostrum ipsum id explicabo eveniet quaerat, vero autem fugit! Quam odit nobis, sed repudiandae adipisci vel beatae vitae alias. Veniam nihil modi tempora dignissimos aut? Beatae provident aut minus, eum sed impedit quibusdam amet quasi corrupti repellendus cupiditate molestiae, perspiciatis fuga iusto, odit deserunt nisi laborum ipsa. Distinctio facilis voluptas labore doloremque molestias minima voluptatibus quis aliquam.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias perspiciatis commodi quae amet hic voluptate? Pariatur mollitia corporis quis illo officia expedita ratione id fuga fugiat repudiandae? Omnis quidem eum tempora neque excepturi eius sed expedita rem at, iusto voluptatem delectus consequatur et quia voluptatibus laborum nostrum ipsum id explicabo eveniet quaerat, vero autem fugit! Quam odit nobis, sed repudiandae adipisci vel beatae vitae alias. Veniam nihil modi tempora dignissimos aut? Beatae provident aut minus, eum sed impedit quibusdam amet quasi corrupti repellendus cupiditate molestiae, perspiciatis fuga iusto, odit deserunt nisi laborum ipsa. Distinctio facilis voluptas labore doloremque molestias minima voluptatibus quis aliquam.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias perspiciatis commodi quae amet hic voluptate? Pariatur mollitia corporis quis illo officia expedita ratione id fuga fugiat repudiandae? Omnis quidem eum tempora neque excepturi eius sed expedita rem at, iusto voluptatem delectus consequatur et quia voluptatibus laborum nostrum ipsum id explicabo eveniet quaerat, vero autem fugit! Quam odit nobis, sed repudiandae adipisci vel beatae vitae alias. Veniam nihil modi tempora dignissimos aut? Beatae provident aut minus, eum sed impedit quibusdam amet quasi corrupti repellendus cupiditate molestiae, perspiciatis fuga iusto, odit deserunt nisi laborum ipsa. Distinctio facilis voluptas labore doloremque molestias minima voluptatibus quis aliquam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias perspiciatis commodi quae amet hic voluptate? Pariatur mollitia corporis quis illo officia expedita ratione id fuga fugiat repudiandae? Omnis quidem eum tempora neque excepturi eius sed expedita rem at, iusto voluptatem delectus consequatur et quia voluptatibus laborum nostrum ipsum id explicabo eveniet quaerat, vero autem fugit! Quam odit nobis, sed repudiandae adipisci vel beatae vitae alias. Veniam nihil modi tempora dignissimos aut? Beatae provident aut minus, eum sed impedit quibusdam amet quasi corrupti repellendus cupiditate molestiae, perspiciatis fuga iusto, odit deserunt nisi laborum ipsa. Distinctio facilis voluptas labore doloremque molestias minima voluptatibus quis aliquam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias perspiciatis commodi quae amet hic voluptate? Pariatur mollitia corporis quis illo officia expedita ratione id fuga fugiat repudiandae? Omnis quidem eum tempora neque excepturi eius sed expedita rem at, iusto voluptatem delectus consequatur et quia voluptatibus laborum nostrum ipsum id explicabo eveniet quaerat, vero autem fugit! Quam odit nobis, sed repudiandae adipisci vel beatae vitae alias. Veniam nihil modi tempora dignissimos aut? Beatae provident aut minus, eum sed impedit quibusdam amet quasi corrupti repellendus cupiditate molestiae, perspiciatis fuga iusto, odit deserunt nisi laborum ipsa. Distinctio facilis voluptas labore doloremque molestias minima voluptatibus quis aliquam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias perspiciatis commodi quae amet hic voluptate? Pariatur mollitia corporis quis illo officia expedita ratione id fuga fugiat repudiandae? Omnis quidem eum tempora neque excepturi eius sed expedita rem at, iusto voluptatem delectus consequatur et quia voluptatibus laborum nostrum ipsum id explicabo eveniet quaerat, vero autem fugit! Quam odit nobis, sed repudiandae adipisci vel beatae vitae alias. Veniam nihil modi tempora dignissimos aut? Beatae provident aut minus, eum sed impedit quibusdam amet quasi corrupti repellendus cupiditate molestiae, perspiciatis fuga iusto, odit deserunt nisi laborum ipsa. Distinctio facilis voluptas labore doloremque molestias minima voluptatibus quis aliquam.</p>
+
     </main>
 </body>
 </html>
