Texto já responsivo
Falta configurar para que o texto dentro da div não saia

--- a/desafios/d012 (cordel)/cordel-moderno.html
+++ b/desafios/d012 (cordel)/cordel-moderno.html
@@ -84,7 +84,7 @@
         Deixe que Deus interprete.<br>
     </p>
     <footer>
-        Site criado por <strong><a href="https://github.com/AdrianoGomesFilho">Adriano Gomes</a></strong>
+        Site criado por <strong><a href="https://github.com/AdrianoGomesFilho" target="_blank">Adriano Gomes</a></strong>
     </footer>
 </main>
 </body>
