--- a/ex23 (tabelas)/tabela004.html
+++ b/ex23 (tabelas)/tabela004.html
@@ -7,52 +7,46 @@
     <title>Tabela</title>
 
     <style> 
-    
-    table {
-        border-collapse: collapse;
-        width: 700px;
+    body {
         font-family: Arial, Helvetica, sans-serif;
     }
 
-   
-
-    thead > tr > th{
-        padding: 10px;
-        border: 1px solid black;
+    table {
         border-collapse: collapse;
-        text-align: center;
     }
 
-    tbody > tr > td {
-        padding: 10px;
-        border: 1px solid black;
-        border-collapse: collapse;
-        text-align: center;
-    }
-
-    .negrito {
+    caption {
+        font-size: 1.3em;
         font-weight: bold;
+        padding: 10px;
     }
 
-    
-    </style>
+    th, td {
+           border: 1px solid black;
+        padding: 10px;
+    }
+
+</style>
 </head>
 <body>
     <table>
+        <caption>
+            Filmes favoritos
+        </caption>
         <thead>
             <tr>
-                <th>Grupo</th>
-                <th>Nomes</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupo</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td rowspan="3" class="negrito">Mulheres</td>
+                <th rowspan="3" scope="rowgroup">Mulheres</td>
                 <td>Ana Maria Santos</td>
-                <td> Alien</td>
-                <td> Rambo</td>
-                <td> Vingadores</td>
+                <td>Alien</td>
+                <td>Rambo</td>
+                <td>Vingadores</td>
             </tr>
             <tr>
                 <td>Beatriz Souza</td>
@@ -67,7 +61,7 @@
                 <td>Big Hero</td>
             </tr>
             <tr>
-                <td rowspan="3" class="negrito">Homens</td>
+                <th rowspan="3" scope="rowgroup">Homens</td>
                 <td>Bruno Mendonça</td>
                 <td>Intocáveis</td>
                 <td>Amnésia</td>
@@ -86,7 +80,12 @@
                 <td>Toy Story</td>
             </tr>
         </tbody>
-        <tfoot></tfoot>
+        <tfoot>
+            <tr>
+                <th colspan="4" scope="row">Total</th>
+                <td>1000</td>
+            </tr>
+        </tfoot>
     </table>
 </body>
 </html>
