Desenvolvendo o projeto redes sociais

--- a/desafios/d015 (redes_sociais)/index.html
+++ b/desafios/d015 (redes_sociais)/index.html
@@ -9,10 +9,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="celular">
-        <iframe src="sites/github.html" id="tela"></iframe>
-        <img src="imagens/frame-iphone.png" alt="">
-        </div>
+<div>
+    <iframe src="sites/github.html" frameborder="0"></iframe>
+    <img id="iphone" src="imagens/frame-iphone.png" alt="">
+    
+</div>
+<section id="botoes">
+    <img src="imagens/logo-facebook.jpg" alt="" id="facebook">
+</section>
+
+
    
 </body>
 </html>
