--- a/desafios/d015 (redes_sociais)/Doing myself/sites/github.html
+++ b/desafios/d015 (redes_sociais)/Doing myself/sites/github.html
@@ -15,16 +15,35 @@
             overflow:hidden;
             overflow-y: scroll;
         }
-    div {
-    margin: auto;
-    width: 92vw;
-    
-    }
+        div {
+        margin: auto;
+        width: 92vw;
+       
+        }
+
+        section {
+        background-color: rgb(255, 0, 0);
+        text-align: center;
+        font: normal bold 1.5em arial;
+        height: 30px;
+        color: white;
+        margin: auto;
+        width: 92vw;
+        }
+
+        a {
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
     <div>
         <img src="../imagens/tela-github.jpg" alt="" width="100%">
     </div>
+    <a href="https://gustavoguanabara.github.io/" target="_blank">
+        <section>
+            ACESSE
+        </section>
+    </a>
 </body>
 </html>
