--- a/desafios/d015 (redes_sociais)/Doing myself/sites/home.html
+++ b/desafios/d015 (redes_sociais)/Doing myself/sites/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Github</title>
+    <title>Home</title>
     <style>
         ::-webkit-scrollbar {
             display: none;
@@ -15,16 +15,16 @@
             overflow:hidden;
             overflow-y: scroll;
         }
-    div {
-    margin: auto;
-    width: 92vw;
-    
-    }
+        div {
+        margin: auto;
+        width: 92vw;
+        
+        }
     </style>
 </head>
 <body>
     <div>
-        <img src="../imagens/tela-github.jpg" alt="" width="100%">
+        <img src="../imagens/tela-home.jpg" alt="" width="100%">
     </div>
 </body>
 </html>
