estudos de chat gpt e tela de login

--- a/desafios/d015 (tela de login)/index.html
+++ b/desafios/d015 (tela de login)/index.html
@@ -30,14 +30,14 @@
 
             <div class="campo">
                 <p>
-                    <label for="isenha"></label>
-                    <input type="password" id="isenha" required placeholder="sua senha">
+                    <label for="isenha"><img src="imagens/senha.png" class="icon"></label>
+                    <input type="password" id="isenha" required placeholder="sua senha" size="15" minlength="8" maxlength="15">
                 </p>
             </div>
 
         <p>
-            <input type="submit" value="Entrar" id="entrar"> <br>
-            <input type="submit" value="Esqueci a senha" id="esqueci">
+            <input type="submit" value="Entrar" id="botaoentrar"> <br>
+            <input type="submit" value="Esqueci a senha" id="botaoesqueci">
         </p>
         
         </form>
